--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banana speak</title>
+    <link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
-    This website is under development
+    <textarea id="txt-input" placeholder="Enter your sentence in english here and we will convert it to banana"></textarea>   
+    <button id="btn-translate">Translate</button>
+
+    <div style="font-size: large; padding: 1rem;">Ouput will be here:</div>
+    <div id="output"></div>
+    <script src="app.js" type="text/javascript"></script>
+    
 </body>
 </html>
