--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <img id="img-eyes" src="/images/minionEyes.png"/>
 
-    <textarea id="txt-input" placeholder="Enter your sentence in english here and we will convert it to banana"></textarea> 
+    <textarea id="txt-input" placeholder="English text goes here..."></textarea> 
     <button id="btn-translate">Translate</button>
 
     <textarea readonly id="output" placeholder="minion dif..."></textarea>
@@ -22,7 +22,9 @@
     <script src="app.js" type="text/javascript"></script>
     
     <footer>
+        <p>The Minions’ language is a combination of French, Spanish, English… and food references!!</p>
         <img id="img-footer" src="/images/Minions_characters.png"/>
+        <p style="color: yellow; font-size: 200%;">Ba-ba-ba-ba-ba-nana</p>
     </footer>
 
     
