style: added background image

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </header>
 
     <img id="img-eyes" src="/images/minionEyes.png"/>
+    
 
     <textarea id="txt-input" placeholder="English text goes here..."></textarea> 
     <button id="btn-translate">Translate</button>
@@ -25,6 +26,7 @@
         <p>The Minions’ language is a combination of French, Spanish, English… and food references!!</p>
         <img id="img-footer" src="/images/Minions_characters.png"/>
         <p style="color: yellow; font-size: 200%;">Ba-ba-ba-ba-ba-nana</p>
+        <p><small>Made with ❤️ by Apurva</small></p>
     </footer>
 
     
